secured-end-ponits