@@ -14,7 +14,7 @@
 	<name>StatVital</name>
 	<description>Project for Spring Boot</description>
 	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.source>20</maven.compiler.source>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -163,11 +163,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <source>20</source>-->
+<!--                    <target>20</target>-->
+<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+<!--                </configuration>-->
             </plugin>
         </plugins>
 	</build>
